--- a/json/json-struts/src/main/webapp/WEB-INF/web.xml
+++ b/json/json-struts/src/main/webapp/WEB-INF/web.xml
@@ -1,31 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<web-app id="WebApp_ID" version="4.0"
-         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                        http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
+<web-app id="WebApp_ID" version="6.0"
+  xmlns="https://jakarta.ee/xml/ns/jakartaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
 
   <display-name>Struts 2 JSON Tutorial</display-name>
   <welcome-file-list>
     <welcome-file>index</welcome-file>
   </welcome-file-list>
 
-  <!-- 요청/응답의 UTF-8 Character Encoding 설정 -->
-  <!--
-  <filter>
-    <filter-name>encodingFilter</filter-name>
-    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-    <init-param>
-      <param-name>forceEncoding</param-name>
-      <param-value>true</param-value>
-    </init-param>
-  </filter>
-  -->
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.fp024.struts2.study.demo.filter.CharacterEncodingFilter</filter-class>
