--- a/coding-actions/coding-actions-struts/src/main/webapp/WEB-INF/web.xml
+++ b/coding-actions/coding-actions-struts/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,8 @@
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <session-config>
+    <tracking-mode>COOKIE</tracking-mode>
+  </session-config>
 </web-app>
