--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
         <groupId>com.fasterxml.jackson</groupId>
         <artifactId>jackson-bom</artifactId>
         <version>${jackson.version}</version>
+        <scope>import</scope>
         <type>pom</type>
       </dependency>
       <dependency>
